ciao-down: Ensure skeleton files are copied
There was a bug in some of the ciao-down workloads that prevented the
skeleton files, such as .bashrc, from being copied into the user accounts
created on the guest.  This happened if a mount was specified with a path
in the user's home directory.  The issue has been fixed by delaying the
mounting of files until the user's home directory has been created.

Signed-off-by: Mark Ryan <mark.d.ryan@intel.com>

--- a/testutil/ciao-down/workloads/clearcontainers.yaml
+++ b/testutil/ciao-down/workloads/clearcontainers.yaml
@@ -18,9 +18,6 @@ mounts:
 {{end}}
 {{ define "GOPATH" }}{{with .GoPath}}{{$.MountPath "hostgo"}}{{else}}/home/{{.User}}/go{{end}}{{end}}
 #cloud-config
-mounts:
-{{range .Mounts}} - [{{.Tag}}, {{.Path}}, 9p, "x-systemd.automount,x-systemd.device-timeout=10,nofail,trans=virtio,version=9p2000.L", "0", "0"]
-{{end -}}
 write_files:
 {{- if len $.HTTPProxy }}
  - content: |
@@ -69,7 +66,24 @@ apt:
 package_upgrade: {{with .PackageUpgrade}}{{.}}{{else}}true{{end}}
 
 runcmd:
+ - {{beginTask . "Booting VM"}}
+ - {{endTaskOk . }}
+
+ - {{beginTask . (printf "Adding %s to /etc/hosts" .Hostname) }}
  - echo "127.0.0.1 {{.Hostname}}" >> /etc/hosts
+ - {{endTaskCheck .}}
+
+{{range .Mounts}}
+ - mkdir -p {{.Path}}
+ - sudo chown {{$.User}}:{{$.User}} {{.Tag}}
+ - echo "{{.Tag}} {{.Path}} 9p x-systemd.automount,x-systemd.device-timeout=10,nofail,trans=virtio,version=9p2000.L 0 0" >> /etc/fstab
+{{end}}
+{{range .Mounts}}
+ - {{beginTask $ (printf "Mounting %s" .Path) }}
+ - mount {{.Path}}
+ - {{endTaskCheck $}}
+{{end}}
+
  - chown {{.User}}:{{.User}} /home/{{.User}}
  - rm /etc/update-motd.d/10-help-text /etc/update-motd.d/51-cloudguest
  - rm /etc/update-motd.d/90-updates-available
