--- a/testutil/ciao-down/workloads/xenial.yaml
+++ b/testutil/ciao-down/workloads/xenial.yaml
@@ -10,9 +10,6 @@ base_image_name: Ubuntu 16.04
 {{- print " DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true " -}}
 {{end}}
 #cloud-config
-mounts:
-{{range .Mounts}} - [{{.Tag}}, {{.Path}}, 9p, "x-systemd.automount,x-systemd.device-timeout=10,nofail,trans=virtio,version=9p2000.L", "0", "0"]
-{{end -}}
 write_files:
 {{- if len $.HTTPProxy }}
  - content: |
@@ -36,10 +33,23 @@ apt:
 package_upgrade: {{with .PackageUpgrade}}{{.}}{{else}}false{{end}}
 
 runcmd:
- - echo "127.0.0.1 {{.Hostname}}" >> /etc/hosts
-
  - {{beginTask . "Booting VM"}}
  - {{endTaskOk . }}
+
+ - {{beginTask . (printf "Adding %s to /etc/hosts" .Hostname) }}
+ - echo "127.0.0.1 {{.Hostname}}" >> /etc/hosts
+ - {{endTaskCheck .}}
+
+{{range .Mounts}}
+ - mkdir -p {{.Path}}
+ - sudo chown {{$.User}}:{{$.User}} {{.Tag}}
+ - echo "{{.Tag}} {{.Path}} 9p x-systemd.automount,x-systemd.device-timeout=10,nofail,trans=virtio,version=9p2000.L 0 0" >> /etc/fstab
+{{end}}
+{{range .Mounts}}
+ - {{beginTask $ (printf "Mounting %s" .Path) }}
+ - mount {{.Path}}
+ - {{endTaskCheck $}}
+{{end}}
 
  - {{finished .}}
 
