ciao-down: Store ciao user settings in .profile
The ciao workload was initialising what are essentially user settings, such
as the GOPATH and PATH in /etc/environment, which was incorrect as the
values of these variables contain references to directories in the
user's path.  This commit moves them to the created user's .profile file.

Signed-off-by: Mark Ryan <mark.d.ryan@intel.com>

--- a/testutil/ciao-down/workloads/ciao-fedora25.yaml
+++ b/testutil/ciao-down/workloads/ciao-fedora25.yaml
@@ -206,8 +206,8 @@ runcmd:
  - {{endTaskCheck .}}
 {{end}}
 
- - echo "export GOPATH={{template "GOPATH" . }}" >> /home/{{.User}}/.bashrc
- - echo "export PATH=$PATH:{{template "GOPATH" . }}/bin:/usr/local/go/bin" >> /home/{{.User}}/.bashrc
+ - echo "export GOPATH={{template "GOPATH" . }}" >> /home/{{.User}}/.profile
+ - echo "export PATH=$PATH:{{template "GOPATH" . }}/bin:/usr/local/go/bin" >> /home/{{.User}}/.profile
 
  - {{finished .}}
   
