--- a/testutil/ciao-down/workloads/ciao.yaml
+++ b/testutil/ciao-down/workloads/ciao.yaml
@@ -51,6 +51,9 @@ write_files:
  - content: |
      deb https://apt.dockerproject.org/repo ubuntu-xenial main
    path: /etc/apt/sources.list.d/docker.list
+ - content: |
+     deb http://apt.kubernetes.io/ kubernetes-xenial main
+   path: /etc/apt/sources.list.d/kubernetes.list
 
 apt:
 {{- if len $.HTTPProxy }}
@@ -109,12 +112,20 @@ runcmd:
  - {{template "ENV" .}}apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
  - {{endTaskCheck .}}
 
+ - {{beginTask . "Add Google GPG key" }}
+ - {{template "ENV" .}}curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
+ - {{endTaskCheck .}}
+
  - {{beginTask . "Retrieving updated list of packages"}}
  - {{template "ENV" .}}apt-get update
  - {{endTaskCheck .}}
 
  - {{beginTask . "Installing Docker"}}
  - {{template "ENV" .}}apt-get install docker-engine -y
+ - {{endTaskCheck .}}
+
+ - {{beginTask . "Installing kubectl"}}
+ - {{template "ENV" .}}apt-get install kubectl -y
  - {{endTaskCheck .}}
 
  - {{beginTask . "Installing GCC"}}
