ciao-down: Workloads should define if they need nested VM support
Some workloads need nested VM support, others don't. Currently we always
check for nested VM support and prevent workloads that don't need it to
start.

Instead, let's put that workload specific knowledge in the workload
description and only check for nested VM support if the workload needs
it.

Fixes: https://github.com/01org/ciao/issues/1351
Signed-off-by: Damien Lespiau <damien.lespiau@intel.com>

--- a/testutil/ciao-down/workloads/ciao-fedora25.yaml
+++ b/testutil/ciao-down/workloads/ciao-fedora25.yaml
@@ -2,6 +2,7 @@
 base_image_url: https://download.fedoraproject.org/pub/fedora/linux/releases/25/CloudImages/x86_64/images/Fedora-Cloud-Base-25-1.3.x86_64.qcow2
 base_image_name: Fedora 25
 hostname: singlevm
+needs_nested_vm: true
 ...
 ---
 {{with .GoPath}}
