--- a/ciao-launcher/tests/examples/start_efi.yaml
+++ b/ciao-launcher/tests/examples/start_efi.yaml
@@ -1,10 +1,8 @@
 ---
 start:
-  requested_resources:
-     - type: vcpus
-       value: 2
-     - type: mem_mb
-       value: 256
+  requirements:
+    vcpus: 2
+    mem_mb: 256
   instance_uuid: 67d86208-b46c-4465-9018-fe14087d415
   tenant_uuid: 67d86208-000-4465-9018-fe14087d415f
   networking:
