--- a/ciao-launcher/tests/examples/start_legacy.yaml
+++ b/ciao-launcher/tests/examples/start_legacy.yaml
@@ -1,10 +1,8 @@
 ---
 start:
-  requested_resources:
-     - type: vcpus
-       value: 2
-     - type: mem_mb
-       value: 370
+  requirements:
+    vcpus: 2
+    mem_mb: 370
   instance_uuid: d7d86208-b46c-4465-9018-ee14087d415f
   tenant_uuid: 67d86208-000-4465-9018-fe14087d415f
   fw_type: legacy
