--- a/ciao-launcher/tests/examples/start_nn.yaml
+++ b/ciao-launcher/tests/examples/start_nn.yaml
@@ -3,13 +3,10 @@
 runcmd:
   - [ touch, "/etc/bootdone" ]
 start:
-  requested_resources:
-     - type: vcpus
-       value: 2
-     - type: mem_mb
-       value: 256
-     - type: network_node
-       value: 1
+  requirements:
+    vcpus: 2
+    mem_mb: 256
+    network_node: true
   instance_uuid: 67d86208-b46c-4465-0000-fe14087d415f
   tenant_uuid: 67d86208-0000-0000-9018-fe14087d415f
   fw_type: legacy
