--- a/ciao-cli/examples/fedora_cloud.yaml
+++ b/ciao-cli/examples/fedora_cloud.yaml
@@ -1,7 +1,7 @@
 description: "Fedora VM no storage"
 vm_type: qemu
 fw_type: legacy
-defaults:
+requirements:
     vcpus: 2
     mem_mb: 512
 cloud_init: fedora_vm.yaml
