--- a/ciao-cli/examples/fedora_cloud_disk.yaml
+++ b/ciao-cli/examples/fedora_cloud_disk.yaml
@@ -1,7 +1,7 @@
 description: "Fedora VM with attached empty storage"
 vm_type: qemu
 fw_type: legacy
-defaults:
+requirements:
     vcpus: 2
     mem_mb: 512
 cloud_init: "fedora_vm.yaml"
