--- a/ciao-cli/examples/ubuntu_latest.yaml
+++ b/ciao-cli/examples/ubuntu_latest.yaml
@@ -1,7 +1,7 @@
 description: "Ubuntu latest container"
 vm_type: docker
 image_name: "ubuntu:latest"
-defaults:
+requirements:
   vcpus: 2
   mem_mb: 512
 cloud_init: "docker-ubuntu.yaml"
