ciao-cli/bat: Use more generic term for source in workloads
Now that we accept a name for source in the storage definition for a
workload adjust the name to reflect that is not just an ID any longer.

Signed-off-by: Rob Bradford <robert.bradford@intel.com>

--- a/ciao-cli/examples/fedora_cloud.yaml
+++ b/ciao-cli/examples/fedora_cloud.yaml
@@ -8,6 +8,6 @@ cloud_init: fedora_vm.yaml
 disks:
   - source:
        service: image
-       id: "73a86d7e-93c0-480e-9c41-ab42f69b7799"
+       source: "73a86d7e-93c0-480e-9c41-ab42f69b7799"
     ephemeral: true
     bootable: true
