--- a/ciao-cli/examples/fedora_cloud_disk.yaml
+++ b/ciao-cli/examples/fedora_cloud_disk.yaml
@@ -8,7 +8,7 @@ cloud_init: "fedora_vm.yaml"
 disks:
 - source:
     service: image
-    id: "73a86d7e-93c0-480e-9c41-ab42f69b7799"
+    source: "73a86d7e-93c0-480e-9c41-ab42f69b7799"
   bootable: true
   ephemeral: true
 - size: 20
